# lysai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: executor.py  orchestrator.py  pdf_generator.py  planner.py  reflector.py  summarizer.py  tool_inspector.py
core/: __init__.py  db_client.py  embeddings.py  llm_client.py  mcp_client.py  memory.py  semantic.py  state.py  utils.py
graphs/: lysai_graph.py
infra/: Dockerfile.pagila  README.md  docker-compose.yml  fix_pagila_schema.sh
infra/docker-init/: 00_init_pagila.sh
memory_store/: memory.db
memory_store/chroma_db/: chroma.sqlite3
tests/: test_db.py  test_insight.py  test_llm.py  test_memory.py  test_pdf.py  test_quick.py  test_rev21.py
tools/mcp/: server.py  settings.py
tools/mcp/tools/: __init__.py  pdf_tools.py  sql_tools.py
tools/mcp_sql/: server.py
