[project]
name = "lysai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.43.0",
    "httpx>=0.28.1",
    "langgraph>=0.6.10",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
]
